--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -1,1 +1,16 @@
-<p>board works!</p>
+<h1>Current Player: {{player}}</h1>
+
+<button (click)="newGame()">Start a new Game</button>
+
+
+<h2 *ngIf="winner">Player {{winner}} have won the game!</h2>
+
+<main>
+    <app-square 
+        *ngFor="let val of squares; let i=index"
+        [buttonvalue]="val"
+        (click)="makeMove(i)">
+
+    </app-square>
+
+</main>
